@@ -1,6 +1,11 @@
 # ChangeLog file for monetdb-java
 # This file is updated with Maddlog
 
+* Thu Feb 10 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
+- Added recognition of 'xml' type. Use default mapping to Types.VARCHAR for
+  easy and fast (as java.lang.String) retrieval, display and setting data of
+  columns of type 'xml'.
+
 * Thu Jan 27 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
 - Compiled and released new jar files: monetdb-jdbc-3.2.jre8.jar,
   monetdb-mcl-1.21.jre8.jar and jdbcclient.jre8.jar
